# markclip

./: Cargo.toml  README.md  markclip.service
.github/workflows/: build-deb.yml  release.yml
src/: main.rs
